fix wiki page centering on mobile screen

--- a/about/style.css
+++ b/about/style.css
@@ -1,11 +1,14 @@
 body {
   max-width: 1200px;
   margin: 0 auto;
+  padding-left: 13.5rem;
+  padding-right: 13.5rem;
 
   header {    
     nav {
       display: flex;
       justify-content: space-evenly;
+      align-items: center;
       border-top: 1rem solid;
       border-bottom: 1rem solid;
       border-color: #5072A7;
@@ -41,56 +44,47 @@ body {
   }
 
   @media (max-width: 468px) {
-    padding: 20px 50px;
-    width: 100%;
-    
-    .flex-container {
-      width: 100%;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1em;
-    }
+      padding-left: 1rem;
+      padding-right: 1rem;
   }
 
   @media (min-width: 468px) {
-    padding: 20px;
-  }
-
-  @media (min-width: 600px) {
-    padding: 40px;
+      padding-left: 1rem;
+      padding-right: 1rem;
   }
   
   @media (min-width: 768px) {
-    padding: 75px;
-    
-    .flex-container {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-gap: 50px;
-    }
+      padding-left: 6rem;
+      padding-right: 6rem;
   }
 
   @media (min-width: 992px) {
-    padding: 100px;
-
-    section {
-      display: grid;
-    }
+      padding-left: 10rem;
+      padding-right: 10rem;
   }
 }
 
-.self-img {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: -3rem;
+.flex-container {
+    display: flex;
 
-  img {
-    width: 75%;
-    object-fit: cover;
-    transform: scale(-1, 1);
-  }
+    @media (max-width: 468px) {
+        flex-wrap: wrap;
+    }
+
+    @media (min-width: 768px) {
+        flex-wrap: nowrap;
+    }
+}
+
+.about-me {
+    img {
+        transform: scale(-1, 1);
+        max-width: 200px;
+        height: auto;
+        float: right;
+        margin-top: -1rem;
+        margin-left: 10px;
+    }
 }
 
 .youtube-video {
